%% 全澳导航 · 类图 / 数据结构（v1.3.0 提案 · 修订 R2，2026-09-18）
%% 对应设计文档：docs/设计-全澳导航-v1-20260918.md §2 / §4
%% ★R2：候选来源改为高德 transit（TransitClient/AmapPlanSeed），我们做二次计算（Recomputer）与重排（Ranker）；
%%      本地图搜索（GraphSearch/NavCandidate）降级为离线影子对照 / 降级路径。
%% 说明：带 «复用» 标注者沿用现有 src/lib/recommend/types.ts，不重写；
%%       带 «新增» 者为 src/lib/nav/** 新代码。
classDiagram
    direction LR

    %% ---------- 复用：既有推荐域类型（src/lib/recommend/types.ts） ----------
    class RideSegment {
      <<复用>>
      +string route
      +"bus"|"lrt" kind
      +string board
      +string alight
      +[string,string][] hops
    }
    class TransferSegment {
      <<复用>>
      +string at
      +string to
      +boolean sameField
    }
    class WalkLegView {
      <<复用>>
      +number minutes
      +string toLabel
      +number level
      +boolean estimated
      +number samples
      +number? distanceM
    }
    class RideLegView {
      <<复用>>
      +string route
      +"bus"|"lrt" kind
      +string boardLabel
      +string alightLabel
      +number minutes
      +number hops
      +number[] levels
      +number waitMin
      +string liveText
      +CatchTier? tier
      +string tierText
    }
    class TransferView {
      <<复用>>
      +string atLabel
      +number minutes
      +boolean estimated
      +boolean sameField
    }
    class RecommendCard {
      <<复用>>
      +number planId
      +number totalMin
      +number arriveAt
      +WalkLegView walkOut
      +WalkLegView walkIn
      +RideLegView[] rides
      +TransferView[] transfers
      +boolean crossBorder
    }
    class OptionSeed {
      <<复用·旧功能>>
      +number planId
      +string fromSlug
      +string toSlug
      +RideSegment[] segments
      +TransferSegment[] transfers
    }

    %% ---------- 新增：导航域类型（src/lib/nav/types.ts） ----------
    class NavPoint {
      <<新增>>
      +"gps"|"poi"|"station"|"place" kind
      +string label
      +number lng  %% GCJ-02
      +number lat  %% GCJ-02
      +string? code
      +string? poiId
      +string? adcode
    }
    class PoiSearchResult {
      <<新增>>
      +"local"|"amap-inputtips"|"amap-text" source
      +string name
      +string? address
      +string? district
      +string? adcode
      +number lng
      +number lat
      +"station"|"lrt_station"|"poi"|"place" kind
      +number? distM
      +number score
    }
    class AliasEntry {
      <<新增>>
      +string aliasNorm
      +string targetKind
      +string? targetCode
      +string nameTc
      +number? lng
      +number? lat
      +number weight
      +string source
    }
    class StationAmapMap {
      <<新增>>
      +string amapName
      +number amapLng
      +number amapLat
      +string dsatStationMain
      +"coord"|"name"|"both" matchMethod
      +number? matchDistM
      +number confidence
    }
    class WalkInfo {
      <<新增>>
      +number minutes  %% 首末: distance_m / 84 ; 换乘: 轻轨相关=高德时间
      +number? distanceM
      +string toLabel
      +WalkSource source
      +boolean estimated
      +number samples
    }
    class WalkSource {
      <<新增·枚举>>
      amap · amap-cache · walk-times
      amap-transfer · straight-estimate · fallback
    }
    class RateLimiter {
      <<新增·服务·跨实例>>
      +acquire(bucket) boolean  %% Postgres 令牌桶 (advisory lock)
    }
    class WalkWarmer {
      <<新增·离线>>
      +run() void  %% 消费 walk_miss_queue，调 client.ts（离线侧）
    }
    class SeedAdapter {
      <<新增·适配层>>
      +amapPlanToSeed(AmapPlanSeed) OptionSeed
    }
    class AmapPlanSeed {
      <<新增·R2>>
      +number index
      +number amapTotalSec
      +object walkOut
      +object walkIn
      +Leg[] legs  %% 含 amapBoard/Alight/ViaStops + mappedBoard/Alight/Hops
      +Transfer[] transfers
    }
    class RecomputeResult {
      <<新增·R2>>
      +AmapPlanSeed seed
      +number totalMin  %% 排序主键（我们算的）
      +RideLegView[] rides
      +WalkLegView walkOut
      +WalkLegView walkIn
      +TransferView[] transfers
      +Provenance provenance  %% deviationRatio / suspect
    }
    class WalkResolver {
      <<新增>>
      +out(stationMain) WalkInfo
      +in(stationMain) WalkInfo
    }
    class NavCandidate {
      <<新增·R1保留（R2 降级为降级路径）>>
      +string id
      +NavPoint from
      +NavPoint to
      +RideSegment[] segments
      +TransferSegment[] transfers
      +boolean crossBorder
      +string key
    }
    class NavPlan {
      <<新增>>
      +string id
      +number rank
      +number totalMin
      +number arriveAt
      +WalkLegView walkOut
      +WalkLegView walkIn
      +RideLegView[] rides
      +TransferView[] transfers
      +boolean crossBorder
      +Provenance provenance
    }
    class Provenance {
      <<新增>>
      +string walkOut
      +string walkIn
      +number[][] rideLevels
      +boolean hasEstimate
    }

    %% ---------- 新增：服务类（src/lib/nav/**） ----------
    class AliasResolver {
      <<新增·服务>>
      +normalize(q) string
      +resolve(q) AliasEntry[]
    }
    class PoiSearchService {
      <<新增·服务>>
      +suggest(q, userPos) PoiSearchResult[]
    }
    class QuotaGuard {
      <<新增·服务>>
      +allow() boolean
      +record(api, ok, infocode) void
      +isTripped() boolean
    }
    class GraphSearch {
      <<新增·服务·★R2 降级：离线影子对照>>
      +search(S_from, S_to, routeIdx) Path[]  %% 仅离线跑，漏线率监控
    }
    class TransitClient {
      <<新增·服务·R2>>
      +fetchPlans(originGcj, destGcj) AmapPlanSeed[]  %% AlternativeRoute=10
    }
    class Recomputer {
      <<新增·服务·R2>>
      +recompute(AmapPlanSeed) RecomputeResult  %% lookupHop 逐跳重算 + 短距修正 + 差异检测
    }
    class Ranker {
      <<新增·服务·R2>>
      +rank(RecomputeResult[]) RecomputeResult[]  %% T_ours 升序 → 换乘 → 步行
    }
    class WalkProvider {
      <<新增·服务>>
      +resolve(from, to, stations) WalkResolver
    }
    class NavPlanner {
      <<新增·服务>>
      +plan(pointFrom, pointTo, now) NavResult
    }

    %% ---------- 关系 ----------
    OptionSeed ..> RideSegment : 复用
    OptionSeed ..> TransferSegment : 复用
    NavCandidate ..> RideSegment : 复用
    NavCandidate ..> TransferSegment : 复用
    NavCandidate --> NavPoint : from/to
    NavPlan ..> WalkLegView : 复用
    NavPlan ..> RideLegView : 复用
    NavPlan ..> TransferView : 复用
    NavPlan --> Provenance : 分级标注
    NavPlan ..|> RecommendCard : 结构兼容（渲染复用）

    PoiSearchResult --> NavPoint : 确认后
    AliasEntry --> PoiSearchResult : 本地命中产出
    StationAmapMap --> AmapPlanSeed : 站码对齐接缝（映射失败→退高德时长）

    %% ---- R2 关系 ----
    TransitClient --> AmapPlanSeed : 高德方案解析
    Recomputer --> RecomputeResult
    RecomputeResult --> AmapPlanSeed
    Recomputer ..> RideLegView : 复用（逐跳 lookupHop）
    Recomputer ..> WalkInfo : 短距修正 ÷84
    Ranker --> RecomputeResult
    SeedAdapter ..> AmapPlanSeed
    SeedAdapter ..> OptionSeed
    TransitClient ..> RateLimiter : 跨实例令牌桶 3QPS
    GraphSearch ..> AmapPlanSeed : 离线 diff（漏线率）

    AliasResolver --> AliasEntry
    PoiSearchService --> AliasResolver
    PoiSearchService --> QuotaGuard
    GraphSearch --> NavCandidate
    WalkProvider --> WalkResolver
    WalkResolver --> WalkInfo
    NavPlanner --> GraphSearch
    NavPlanner --> WalkProvider
    NavPlanner --> NavCandidate
    NavPlanner --> NavPlan
    NavPlanner --> RideLegView : 逐跳 lookupHop 建模
